ENH add endpoint for static generation

--- a/kubernetes.yaml
+++ b/kubernetes.yaml
@@ -36,6 +36,7 @@ spec:
         - name: llm-viz
           # Put your own image here
           image: ghcr.io/abell5/llm-viz:latest
+          imagePullPolicy: Always
           env:
             - name: HF_TOKEN
               valueFrom:
