BUILD add sklearn + protobuf to requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,7 @@ fastapi[standard]==0.115.0
 transformers==4.45.2
 pandas==2.2.3
 numpy==2.1.2
+protobuf==6.30.2
+scikit-learn==1.5.2
 # For CPU version: Uncomment line below and remove cuda install from Dockerfile
 # torch==2.4.1
