BUILD add sentencepiece

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,6 @@ pandas==2.2.3
 numpy==2.1.2
 protobuf==6.30.2
 scikit-learn==1.5.2
+sentencepiece==0.2.0
 # For CPU version: Uncomment line below and remove cuda install from Dockerfile
 # torch==2.4.1
