--- a/nginx.conf
+++ b/nginx.conf
@@ -28,6 +28,15 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+            
+            # Disable buffering for streaming responses
+            proxy_buffering off;
+            proxy_cache off;
+            proxy_request_buffering off;
+            
+            # Set timeouts for streaming
+            proxy_read_timeout 300s;
+            proxy_connect_timeout 75s;
         }
 
         location /regenerate {
@@ -36,6 +45,15 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+            
+            # Disable buffering for streaming responses
+            proxy_buffering off;
+            proxy_cache off;
+            proxy_request_buffering off;
+            
+            # Set timeouts for streaming
+            proxy_read_timeout 300s;
+            proxy_connect_timeout 75s;
         }
     }
 }
